src/cairo-clip.c
@@ -433,14 +433,6 @@ _cairo_clip_clip (cairo_clip_t       *clip,
 {
     cairo_status_t status;
     cairo_traps_t traps;
-    cairo_path_fixed_t path_transformed;
-
-    if (_cairo_surface_has_device_transform (target)) {
-	_cairo_path_fixed_init_copy (&path_transformed, path);
-	_cairo_path_fixed_device_transform (&path_transformed,
-					    &target->device_transform);
-	path = &path_transformed;
-    }
 
     status = _cairo_clip_intersect_path (clip,
 					 path, fill_rule, tolerance,
@@ -467,8 +459,6 @@ _cairo_clip_clip (cairo_clip_t       *clip,
 
  bail:
     _cairo_traps_fini (&traps);
-    if (path == &path_transformed)
-	_cairo_path_fixed_fini (&path_transformed);
 
     return status;
 }
